<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
        <EditText
            android:id="@+id/meigushouyi"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="20dp"
            android:textSize="14dp"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView"
            android:hint="@string/yucemeigushouyi"/>
        <TextView
            android:id="@+id/chengyi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/meigushouyi"
            android:layout_marginLeft="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/meigushouyi"
            app:layout_constraintLeft_toRightOf="@+id/meigushouyi"
            android:text="x"/>
        <EditText
            android:id="@+id/zongguben"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:inputType="numberDecimal"
            android:textSize="14dp"
            app:layout_constraintTop_toTopOf="@+id/meigushouyi"
            app:layout_constraintBottom_toBottomOf="@+id/meigushouyi"
            app:layout_constraintLeft_toRightOf="@+id/chengyi1"
            android:hint="@string/zongguben"/>
        <TextView
            android:id="@+id/dengyu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            app:layout_constraintTop_toTopOf="@+id/meigushouyi"
            app:layout_constraintBottom_toBottomOf="@+id/meigushouyi"
            app:layout_constraintLeft_toRightOf="@+id/zongguben"
            android:text="="/>
        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="14dp"
            app:layout_constraintTop_toTopOf="@+id/meigushouyi"
            app:layout_constraintBottom_toBottomOf="@+id/meigushouyi"
            app:layout_constraintLeft_toRightOf="@+id/dengyu"
            android:hint="@string/yucejinglirun"/>

        <EditText
            android:id="@+id/shiZhi"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="20dp"
            android:textSize="14dp"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@+id/meigushouyi"
            android:hint="@string/zongshizhi"/>
        <TextView
            android:id="@+id/chuyi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/shiZhi"
            android:layout_marginLeft="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/shiZhi"
            app:layout_constraintLeft_toRightOf="@+id/shiZhi"
            android:text="/"/>
        <EditText
            android:id="@+id/jinglirun"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:inputType="numberDecimal"
            android:textSize="14dp"
            app:layout_constraintTop_toTopOf="@+id/shiZhi"
            app:layout_constraintBottom_toBottomOf="@+id/shiZhi"
            app:layout_constraintLeft_toRightOf="@+id/chuyi"
            android:hint="@string/yucejinglirun"/>
        <TextView
            android:id="@+id/dengyu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            app:layout_constraintTop_toTopOf="@+id/shiZhi"
            app:layout_constraintBottom_toBottomOf="@+id/shiZhi"
            app:layout_constraintLeft_toRightOf="@+id/jinglirun"
            android:text="="/>
        <TextView
            android:id="@+id/result2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="14dp"
            app:layout_constraintTop_toTopOf="@+id/jinglirun"
            app:layout_constraintBottom_toBottomOf="@+id/jinglirun"
            app:layout_constraintLeft_toRightOf="@+id/dengyu2"
            android:hint="@string/shiyinglv"/>


        <EditText
            android:id="@+id/mubiaoshiyinglv"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="20dp"
            android:inputType="numberDecimal"
            android:textSize="14dp"
            app:layout_constraintTop_toBottomOf="@+id/shiZhi"
            android:hint="@string/mubiaoshiyinglv"/>
        <TextView
            android:id="@+id/chuyi2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/mubiaoshiyinglv"
            android:layout_marginLeft="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/mubiaoshiyinglv"
            app:layout_constraintLeft_toRightOf="@+id/mubiaoshiyinglv"
            android:text="/"/>
        <EditText
            android:id="@+id/dangqianshiyinglv"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:inputType="numberDecimal"
            android:textSize="14dp"
            app:layout_constraintTop_toTopOf="@+id/mubiaoshiyinglv"
            app:layout_constraintBottom_toBottomOf="@+id/mubiaoshiyinglv"
            app:layout_constraintLeft_toRightOf="@+id/chuyi2"
            android:hint="@string/dangqianshiyinglv"/>

        <TextView
            android:id="@+id/chengyi2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/mubiaoshiyinglv"
            android:layout_marginLeft="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/mubiaoshiyinglv"
            app:layout_constraintLeft_toRightOf="@+id/dangqianshiyinglv"
            android:text="x"/>

        <EditText
            android:id="@+id/meigujiage"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="14dp"
            app:layout_constraintTop_toBottomOf="@+id/dangqianshiyinglv"
            app:layout_constraintLeft_toLeftOf="@+id/dangqianshiyinglv"
            android:hint="@string/meigujiage"/>

        <TextView
            android:id="@+id/dengyu3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            app:layout_constraintTop_toTopOf="@+id/meigujiage"
            app:layout_constraintBottom_toBottomOf="@+id/meigujiage"
            app:layout_constraintLeft_toRightOf="@+id/meigujiage"
            android:text="="/>

        <TextView
            android:id="@+id/result3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="14dp"
            app:layout_constraintTop_toTopOf="@+id/meigujiage"
            app:layout_constraintBottom_toBottomOf="@+id/meigujiage"
            app:layout_constraintLeft_toRightOf="@+id/dengyu3"
            android:hint="目标买入价"/>

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/result3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="计算"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>